# vuinputd

./: .gitignore  Cargo.toml  README.md
.github/workflows/: codeql.yml  debian-package.yml  rust.yml
cuse-lowlevel/: Cargo.toml  README.md  build.rs
cuse-lowlevel/src/: lib.rs
debian/: changelog  control  copyright  debhelper-build-stamp  rules  vuinputd.install  vuinputd.postinst
distro-tests/cloud-init/: create-cloud-init-iso.sh
distro-tests/cloud-init/template/: meta-data.tmpl  user-data.tmpl
distro-tests/nixos/: README.md  vuinputd-test-automation.nix
distro-tests/ubuntu-24.04/: download.sh
docs/: BUILD.md  DEBUG.md  DESIGN.md  SECURITY.md  TESTS.md  TROUBLESHOOTING.md  TRUST.md  USAGE-NIXOS.md  USAGE.md
fallbackdm/: DESIGN.md  README.md
fallbackdm/systemd/: pam.d_fallbackdm
uinput-ioctls/: Cargo.toml  README.md
uinput-ioctls/src/: lib.rs
vuinput-examples/: Cargo.toml
vuinputd/: Cargo.toml
vuinputd-tests/: Cargo.toml
vuinputd-tests/podman/: Containerfile
vuinputd-tests/src/: bwrap.rs  ipc.rs  lib.rs  podman.rs  run_vuinputd.rs  test_log.rs
vuinputd-tests/src/devices/: device_base.rs  keyboard.rs  mod.rs  mouse.rs  mouse_absolute.rs  ps4_gamepad.rs  utils.rs  xbox_gamepad.rs
vuinputd-tests/src/scenarios/: basic_keyboard.rs  basic_mouse.rs  basic_mouse_absolute.rs  basic_ps4_gamepad.rs  basic_xbox_gamepad.rs  ff_xbox_gamepad.rs  mod.rs
vuinputd-tests/tests/: integration_tests.rs  podman_tests.rs
vuinputd/src/: compat.rs  global_config.rs  main.rs  monitor_udev.rs  namespace.rs  requesting_process.rs  vt_tools.rs
vuinputd/src/actions/: action.rs  handle_action.rs  mknod_input_device.rs  mod.rs  runtime_data.rs
vuinputd/src/container/: inject_in_container_job.rs  mknod_input_device.rs  mod.rs  netlink_message.rs  remove_from_container_job.rs  runtime_data.rs
vuinputd/src/container_runtime/: injection_strategy.rs  mod.rs
vuinputd/src/cuse_device/: device_policy.rs  evdev_write_watcher.rs  mod.rs  state.rs  vuinput_ioctl.rs  vuinput_open.rs  vuinput_poll.rs  vuinput_read.rs  vuinput_release.rs  vuinput_write.rs
vuinputd/src/input_realizer/: host_fs.rs  input_device.rs  mod.rs  runtime_data.rs
vuinputd/src/job_engine/: closure_job.rs  job.rs  mod.rs  tests.rs
vuinputd/src/jobs/: closure_job.rs  emit_udev_event_in_container_job.rs  emit_udev_event_job.rs  inject_in_container_job.rs  job.rs  job_builder.rs  mknod_device_in_container_job.rs  mknod_device_job.rs  mknod_input_device.rs  mod.rs  monitor_udev_job.rs  netlink_message.rs  remove_device_job.rs  remove_from_container_job.rs  runtime_data.rs  tests.rs
vuinputd/src/process_tools/: mod.rs  ns_fscreds.rs
vuinputd/systemd/: vuinputd.service
vuinputd/udev/: 90-vuinputd-protect.rules  90-vuinputd.hwdb  install_udev.sh
