[package]
name = "vuinput-examples"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "keyboard-advanced"

[[bin]]
name = "mouse-advanced"

[dependencies]
uinput-ioctls = { path = "../uinput-ioctls" }
nix = { version = "0.30", features = ["ioctl"] } # ioctl & libc bindings
libc = "0.2"        # raw system calls
libudev = "0.3" # enumerate-udev
