[package]
name = "vuinputd-tests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test-keyboard"

[[bin]]
name = "bwrap-ipc"

[dependencies]
uinput-ioctls = { path = "../uinput-ioctls" }
nix = { version = "0.30", features = ["ioctl","socket","signal"] } # ioctl & libc bindings
libc = "0.2"        # raw system calls
libudev = "0.3" # enumerate-udev
vuinputd = { path = "../vuinputd" }

[features]
requires-privileges = []
requires-uinput = []
requires-bwrap = []