[package]
name = "vuinputd-tests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test-ipc"

[[bin]]
name = "test-keyboard"

[[bin]]
name = "test-ok"

[dependencies]
uinput-ioctls = { path = "../uinput-ioctls" }
nix = { version = "0.30", features = ["ioctl","socket","signal"] } # ioctl & libc bindings
libc = "0.2"        # raw system calls
libudev = "0.3" # enumerate-udev
vuinputd = { path = "../vuinputd" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
requires-privileges = []
requires-uinput = []
requires-bwrap = []
requires-podman = []