[package]
name = "vuinputd"
version = "0.3.1"
edition = "2021"
authors = ["Johannes Leupolz <dev@leupolz.eu>"]
license = "MIT"
description = "Container-safe mediation daemon for /dev/uinput using CUSE."
repository = "https://github.com/joleuger/vuinputd"
readme = "../README.md"

[dependencies]
uinput-ioctls = { path = "../uinput-ioctls", version = "0.1" }
#fuse = "0.3"          # FUSE/ CUSE interface
cuse-lowlevel = { path = "../cuse-lowlevel", version = "0.1" }
#fuse-backend-rs = "0.13.0"
nix = { version = "0.30", features = ["ioctl","process","sched","fs","event","user","socket","uio"] }
libc = "0.2"        # raw system calls
time = "0.3"           # for Timespec in FUSE replies
#input-linux-sys = "0.9.0"
#linux-raw-sys = {version="0.11.0", features = ["ioctl"]}
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
env_logger = "0.11.8"
libudev = "0.3" # enumerate-udev
regex = "1.12.2"
async-channel = "2.5.0"
futures = "0.3.31"
async-io = "2.6.0"
anyhow = "1.0.100"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
